--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "router-sk8",
-  "homepage": "https://github.com/GutenbergDev/ecommerceSkate/",
+  "homepage": "https://gutenbergdev.github.io/ecommerceSkate/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
